# domify

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: codecov.yml  dependabot.yml  renovate.json  renovate.json5
.github/workflows/: ci-cd.yml  main.yml  release.yml  spec_parser.yml  update-elements.yml
domify/: __about__.py  base_element.py  exc.py  html_elements.py  validators.py
spec_parser/: .gitignore  Makefile  pyproject.toml
spec_parser/spec_parser/: file_writer.py  parser.py  util.py
spec_parser/spec_parser/rules/: __init__.py  attributes.py  categories.py  contexts.py
spec_parser/src/spec_parser/: file_writer.py  parser.py  util.py
spec_parser/src/spec_parser/rules/: attributes.py
src/domify/: __about__.py  base_element.py  html_elements.py  validators.py
tests/: test_base_element.py
